# RAG

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
app/: main.py
app/core/: config.py
app/db/: postgres.py  qdrant.py
app/services/ingestion/: chunker.py  models.py  parsers.py  test_ingestion.py
