[project]
name = "rag"
version = "0.1.0"
description = ""
authors = [
    {name = "vidyasagar1793",email = "vidyasagar994356@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "qdrant-client (>=1.18.0,<2.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
